Okay I understand how hamburgers are supposed to work now.

--- a/StackApp/Base.lproj/Main.storyboard
+++ b/StackApp/Base.lproj/Main.storyboard
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tAv-uS-PeG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bLu-r8-pKb">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
+        <!--Auth View Controller-->
+        <scene sceneID="lG5-4O-ye2">
+            <objects>
+                <viewController id="bLu-r8-pKb" customClass="OAuthViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VoL-Wi-KeJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="SZY-Kj-ocQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ZVN-HV-8Sj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="OF8-dL-ewl"/>
+                    <connections>
+                        <segue destination="tAv-uS-PeG" kind="presentation" identifier="giveMeABurger" id="gnu-gO-gJu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kwt-cr-rUv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="350" y="303"/>
+        </scene>
         <!--Hamburger View Controller-->
         <scene sceneID="tTF-yZ-jZJ">
             <objects>
@@ -22,12 +45,31 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qMR-pD-Yen" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="182" y="303"/>
+            <point key="canvasLocation" x="994" y="303"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="q0X-Ti-D1E">
+            <objects>
+                <viewController storyboardIdentifier="meat2" id="WPM-4e-c3u" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="okM-f2-zaj"/>
+                        <viewControllerLayoutGuide type="bottom" id="Sa0-Xn-Eja"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nU4-H0-Shq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" red="1" green="0.7730747983033891" blue="0.76387351408034032" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ssh-wd-LHr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1612" y="-351"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="HOD-35-2Ky">
             <objects>
-                <viewController storyboardIdentifier="meat" id="6gX-Kr-TsU" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="meat1" id="6gX-Kr-TsU" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Fjz-5b-IAZ"/>
                         <viewControllerLayoutGuide type="bottom" id="6xW-3u-jKC"/>
@@ -41,26 +83,72 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OHi-8R-O4P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="808" y="303"/>
+            <point key="canvasLocation" x="1620" y="303"/>
         </scene>
-        <!--Auth View Controller-->
-        <scene sceneID="gwc-R4-YpK">
+        <!--Cheese Table View Controller-->
+        <scene sceneID="3Ea-Fp-1mu">
             <objects>
-                <viewController storyboardIdentifier="cheese" id="krt-E6-BZG" customClass="OAuthViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="PoT-Sm-1Qb"/>
-                        <viewControllerLayoutGuide type="bottom" id="kd1-Vp-pga"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Njt-Lw-IPh">
+                <tableViewController storyboardIdentifier="cheese" id="jN6-JW-bx0" customClass="CheeseTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="G58-9r-lVh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
-                        <color key="backgroundColor" red="1" green="0.95159968220636126" blue="0.11518783916779518" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4D4-ac-LCt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" red="1" green="0.96737996132778692" blue="0.06353619773634378" alpha="1" colorSpace="calibratedRGB"/>
+                        <sections>
+                            <tableViewSection id="dWC-iH-zbP">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="AKa-j6-KjD" style="IBUITableViewCellStyleDefault" id="JF4-jb-JWx">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JF4-jb-JWx" id="OJs-Lf-rmn">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Controller 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AKa-j6-KjD">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="Gmg-qB-qBo" style="IBUITableViewCellStyleDefault" id="yFf-Fi-lF3">
+                                        <rect key="frame" x="0.0" y="44" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yFf-Fi-lF3" id="ugh-hn-2eT">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Controller 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gmg-qB-qBo">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="jN6-JW-bx0" id="o97-a8-HW9"/>
+                            <outlet property="delegate" destination="jN6-JW-bx0" id="W1H-sN-UUi"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bij-Db-D1S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1446" y="303"/>
+            <point key="canvasLocation" x="2268" y="303"/>
         </scene>
     </scenes>
 </document>
