--- a/StackApp/QuestionTableViewCell.xib
+++ b/StackApp/QuestionTableViewCell.xib
@@ -17,44 +17,73 @@
                 <rect key="frame" x="0.0" y="0.0" width="637" height="224"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qCd-IJ-OZX">
-                        <rect key="frame" x="8" y="8" width="208" height="208"/>
-                        <animations/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="qCd-IJ-OZX" secondAttribute="height" id="4H0-1S-uiU"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Wq-sc-nU4">
-                        <rect key="frame" x="224" y="8" width="405" height="20"/>
-                        <animations/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AeL-E5-CPr">
-                        <rect key="frame" x="224" y="36" width="405" height="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AeL-E5-CPr">
+                        <rect key="frame" x="76" y="68" width="553" height="148"/>
                         <animations/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qCd-IJ-OZX">
+                        <rect key="frame" x="8" y="8" width="60" height="60"/>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="344-tb-Tih"/>
+                            <constraint firstAttribute="width" secondItem="qCd-IJ-OZX" secondAttribute="height" id="4H0-1S-uiU"/>
+                            <constraint firstAttribute="height" constant="60" id="chb-nn-N0Y"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="4H0-1S-uiU"/>
+                            </mask>
+                        </variation>
+                    </imageView>
+                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P69-r8-i9x">
+                        <rect key="frame" x="68" y="8" width="561" height="60"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Wq-sc-nU4">
+                                <rect key="frame" x="20" y="20" width="521" height="20"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3Wq-sc-nU4" firstAttribute="top" secondItem="P69-r8-i9x" secondAttribute="top" constant="20" symbolic="YES" id="Jqt-uT-qxG"/>
+                            <constraint firstItem="3Wq-sc-nU4" firstAttribute="leading" secondItem="P69-r8-i9x" secondAttribute="leading" constant="20" symbolic="YES" id="bh9-7b-Jqx"/>
+                            <constraint firstAttribute="bottom" secondItem="3Wq-sc-nU4" secondAttribute="bottom" constant="20" symbolic="YES" id="kD7-Ac-LLl"/>
+                            <constraint firstAttribute="trailing" secondItem="3Wq-sc-nU4" secondAttribute="trailing" constant="20" symbolic="YES" id="umB-sw-NhA"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <animations/>
                 <constraints>
-                    <constraint firstItem="3Wq-sc-nU4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="42B-y2-KFX"/>
-                    <constraint firstItem="3Wq-sc-nU4" firstAttribute="leading" secondItem="qCd-IJ-OZX" secondAttribute="trailing" constant="8" symbolic="YES" id="7r1-aP-OHk"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="qCd-IJ-OZX" secondAttribute="bottom" id="3sT-Wq-WUq"/>
                     <constraint firstItem="qCd-IJ-OZX" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.3" id="GGE-WB-mRO"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="3Wq-sc-nU4" secondAttribute="trailing" id="RGI-cW-5e3"/>
+                    <constraint firstItem="AeL-E5-CPr" firstAttribute="top" secondItem="P69-r8-i9x" secondAttribute="bottom" id="H8R-zL-ssU"/>
                     <constraint firstItem="AeL-E5-CPr" firstAttribute="leading" secondItem="qCd-IJ-OZX" secondAttribute="trailing" constant="8" symbolic="YES" id="Sv4-cO-H3W"/>
                     <constraint firstAttribute="trailingMargin" secondItem="AeL-E5-CPr" secondAttribute="trailing" id="TQW-EN-UbN"/>
+                    <constraint firstItem="P69-r8-i9x" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="WT0-iX-6dn"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="P69-r8-i9x" secondAttribute="trailing" id="ZpT-G2-m5b"/>
                     <constraint firstItem="qCd-IJ-OZX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="e3f-bj-ean"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="AeL-E5-CPr" secondAttribute="bottom" id="eMy-Rv-cCV"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="qCd-IJ-OZX" secondAttribute="bottom" id="eOh-gc-vGs"/>
                     <constraint firstItem="qCd-IJ-OZX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="ewr-pP-u4Y"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="qCd-IJ-OZX" secondAttribute="bottom" id="uAS-Qo-t94"/>
-                    <constraint firstItem="AeL-E5-CPr" firstAttribute="top" secondItem="3Wq-sc-nU4" secondAttribute="bottom" constant="8" symbolic="YES" id="unD-bm-OdG"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="AeL-E5-CPr" secondAttribute="bottom" id="ffC-MJ-Y6Z"/>
+                    <constraint firstItem="P69-r8-i9x" firstAttribute="height" relation="greaterThanOrEqual" secondItem="qCd-IJ-OZX" secondAttribute="height" id="mP7-Fb-Pjj"/>
+                    <constraint firstItem="P69-r8-i9x" firstAttribute="leading" secondItem="qCd-IJ-OZX" secondAttribute="trailing" id="sMc-TN-VqE"/>
+                    <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="qCd-IJ-OZX" secondAttribute="bottom" id="uAS-Qo-t94"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="3sT-Wq-WUq"/>
                         <exclude reference="GGE-WB-mRO"/>
+                        <exclude reference="eOh-gc-vGs"/>
+                        <exclude reference="uAS-Qo-t94"/>
+                        <exclude reference="ffC-MJ-Y6Z"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
@@ -64,7 +93,7 @@
                 <outlet property="name" destination="AeL-E5-CPr" id="Y7w-NB-p0z"/>
                 <outlet property="title" destination="3Wq-sc-nU4" id="q9l-f3-xcw"/>
             </connections>
-            <point key="canvasLocation" x="511.5" y="339.5"/>
+            <point key="canvasLocation" x="503.5" y="331.5"/>
         </tableViewCell>
     </objects>
 </document>
