Now you can change the sort descriptors in the hamburger menu.

--- a/StackApp/Base.lproj/Main.storyboard
+++ b/StackApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Auth View Controller-->
@@ -179,6 +180,64 @@
                                         </tableViewCellContentView>
                                         <animations/>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="25g-wK-VC2">
+                                        <rect key="frame" x="0.0" y="88" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="25g-wK-VC2" id="kjc-Tq-nXk">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="qv8-Xa-qgr">
+                                        <rect key="frame" x="0.0" y="132" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qv8-Xa-qgr" id="F9F-4Z-2s0">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DB5-GL-emg">
+                                                    <rect key="frame" x="8" y="8" width="40" height="28"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstItem="DB5-GL-emg" firstAttribute="top" secondItem="F9F-4Z-2s0" secondAttribute="topMargin" id="Ipo-i2-hN2"/>
+                                                <constraint firstItem="DB5-GL-emg" firstAttribute="leading" secondItem="F9F-4Z-2s0" secondAttribute="leadingMargin" id="Q1a-ri-a2V"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="DB5-GL-emg" secondAttribute="bottom" id="S2g-qq-A5L"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="xUG-EC-wyM">
+                                        <rect key="frame" x="0.0" y="176" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xUG-EC-wyM" id="adK-YY-RkV">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vvE-l9-330">
+                                                    <rect key="frame" x="8" y="8" width="40" height="28"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstItem="vvE-l9-330" firstAttribute="top" secondItem="adK-YY-RkV" secondAttribute="topMargin" id="MoT-wb-WDj"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="vvE-l9-330" secondAttribute="bottom" id="vFV-bh-0U7"/>
+                                                <constraint firstItem="vvE-l9-330" firstAttribute="leading" secondItem="adK-YY-RkV" secondAttribute="leadingMargin" id="w15-yF-Sz7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -187,6 +246,10 @@
                             <outlet property="delegate" destination="jN6-JW-bx0" id="W1H-sN-UUi"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="orderLabel" destination="vvE-l9-330" id="bZP-ao-QWo"/>
+                        <outlet property="sortLabel" destination="DB5-GL-emg" id="B0J-Z7-RhR"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bij-Db-D1S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
